fixing position of the blackout box cause it was offcenter and driving me insane

--- a/css/mainStructure.css
+++ b/css/mainStructure.css
@@ -95,8 +95,8 @@ body {
 
 #backgroundBlackout {
     position: absolute;
-    width: 580px;
-    margin: 0 32%;
+    width: 40%;
+    margin-left: 30%;
     background-color: black;
 }
 
